--- a/crypto-app/src/app/components/portfolio-chart/portfolio-chart.component.html
+++ b/crypto-app/src/app/components/portfolio-chart/portfolio-chart.component.html
@@ -1,11 +1,19 @@
-<p>portfolio-chart works!</p>
-<p>{{user.id}} - {{user.name}} - {{user.username}} - {{user.password}} - {{user.country}} </p>
 
-<div *ngFor="let investment of investmentsdef">
-    <p>{{investment.id}} - {{investment.quantity}} - {{investment.coin}} - {{investment.dateInvestment}}</p>
+<main class="mx-5">
+    <h3 class="mt-3">Your investment in {{currency}}</h3>
+    <div class="my-2 border shadow-sm col-3">
+<div class="my-2" *ngFor="let investment of investmentsdef">
+    <p>Quantity: <span class="badge rounded-pill bg-success me-2">{{investment.quantity}} {{investment.coin}}</span> Date: <span class="badge rounded-pill bg-primary">
+        {{investment.dateInvestment}}</span></p>
 </div>
-<button (click)="goBack()">Go back</button>
+</div>
 
+
+<div class="chart">
 <highcharts-chart id="container" style="width: 100%; display: block"
 	[Highcharts]="Highcharts">
 </highcharts-chart>
+
+<button class="btn btn-dark my-3" (click)="goBack()">Go back</button>
+</div>
+</main>
