--- a/crypto-app/src/app/components/portfolio/portfolio.component.css
+++ b/crypto-app/src/app/components/portfolio/portfolio.component.css
@@ -14,7 +14,7 @@ span{
     
 }
 
-h4, h3 {
+h3 {
     margin-left: 10px;
     margin-right: 10px;
     margin-top: 1rem;
@@ -26,4 +26,23 @@ p {
     margin-right: 10px;
     margin-top: 1.3rem;
     margin-right: 1rem;
+}
+
+.contenedor {
+    padding-left: 40px;
+}
+
+.caja {
+    width: 800px;
+}
+
+.new-investment * {
+    margin-right: 1rem;
+    width: 200px;
+    height: 40px;
+}
+
+.new-investment, .section-info {
+    display: flex;
+    align-items: baseline;
 }
