--- a/crypto-app/src/app/components/exchange/exchange.component.html
+++ b/crypto-app/src/app/components/exchange/exchange.component.html
@@ -9,7 +9,7 @@
 </select>
         </section>
 <section>
-<button class="btn btn-dark my-3" (click)="convert(quantity, coin)">Convert to USD</button>
+<button class="btn btn-warning my-3" (click)="convert(quantity, coin)">Convert to USD</button>
 <button class="btn btn-dark my-3" (click)="clear()">Clear</button>
 </section>
 <div *ngIf="flag===true"><span class="badge rounded-pill bg-success">{{result1}} $ </span></div>
@@ -27,7 +27,7 @@
 </select>
         </section>
 <section>
-<button class="btn btn-dark my-3" (click)="convert2(quantity2, coin2)">Convert to ...</button>
+<button class="btn btn-warning my-3" (click)="convert2(quantity2, coin2)">Convert to ...</button>
 <button class="btn btn-dark my-3" (click)="clear2()">Clear</button>
 </section>
 <div *ngIf="flag2===true"><span class="badge rounded-pill bg-success">{{result2}} {{coin2}}</span></div>
