--- a/crypto-app/src/app/components/nav-bar/nav-bar.component.html
+++ b/crypto-app/src/app/components/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 
 <div class="nav-bar">
-    <div class="nav-bar-item-img" routerLink="/">
+    <div class="nav-bar-item-img mb-1 px-2" routerLink="/">
         <img src="..\..\assets\img\logo.png">
     </div>
     <div class="nav-bar-item" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
