--- a/crypto-app/src/app/components/portfolio-user-details/portfolio-user-details.component.css
+++ b/crypto-app/src/app/components/portfolio-user-details/portfolio-user-details.component.css
@@ -13,4 +13,13 @@ main *{
 .line {
     display: flex;
     flex-direction: row;
+    align-items: baseline;
+}
+
+.line input {
+    width: 200px;
+}
+
+.line p {
+    width: 100px;
 }
