--- a/crypto-app/src/app/components/foot/foot.component.html
+++ b/crypto-app/src/app/components/foot/foot.component.html
@@ -1,1 +1,10 @@
-<p>foot works!</p>
+<footer>
+<div class="copyright-box col-lg-12 col-md-12 col-sm-12 text-center mt-4 pt-3">
+    <div class="copyright">
+        <p>
+            © Copyright <span><strong>Tennis Website</strong></span>. All right reserved
+        </p>
+        <p>Designed by <em>Tennis Website</em></p>
+    </div>
+</div>
+</footer>
