--- a/crypto-app/src/app/components/cryptocurrency-list/cryptocurrency-list.component.html
+++ b/crypto-app/src/app/components/cryptocurrency-list/cryptocurrency-list.component.html
@@ -12,7 +12,7 @@
   <tbody>
     <tr *ngFor="let currency of currenciesList" [routerLink]="['/historical/', currency.symbol]">
         <td>
-          <img src='../../../assets/img/BTCUSD.png'>
+          <img src='../../../assets/img/{{currency.symbol}}.png'>
         </td>
             <td>
               {{currency.name}}
