--- a/crypto-app/src/app/components/cryptocurrency-list/cryptocurrency-list.component.html
+++ b/crypto-app/src/app/components/cryptocurrency-list/cryptocurrency-list.component.html
@@ -10,9 +10,9 @@
     </tr>
   </thead> 
   <tbody>
-    <tr *ngFor="let currency of currenciesList" [routerLink]="['/historical/', currency.symbol]">
+    <tr *ngFor="let currency of currenciesList; let i = index" [routerLink]="['/historical/', currency.symbol]">
         <td>
-          <img src='../../../assets/img/{{currency.symbol}}.png'>
+          <img src={{currenciesImgPath[i]}}>
         </td>
             <td>
               {{currency.name}}
